--- a/SISTEMA_CENSO_INSTRUCTORES/SISTEMA_CENSO_INSTRUCTORES.csproj
+++ b/SISTEMA_CENSO_INSTRUCTORES/SISTEMA_CENSO_INSTRUCTORES.csproj
@@ -25,7 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>1.8</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.2</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -63,6 +63,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -390,7 +392,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\dbcontext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\T_ADMINISTRADORES2020.cs" />
+    <Compile Include="Models\T_DATOS_DEL_COLABORADOR.cs" />
+    <Compile Include="Models\T_DATOS_PARA_CENSO2020.cs" />
+    <Compile Include="Models\T_EXPERIENCIA_INSTRUCTORES.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="utilidades\DBConnections.cs" />
