--- a/SISTEMA_CENSO_INSTRUCTORES/bin/SISTEMA_CENSO_INSTRUCTORES.dll.config
+++ b/SISTEMA_CENSO_INSTRUCTORES/bin/SISTEMA_CENSO_INSTRUCTORES.dll.config
@@ -10,6 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SISTEMA_CENSO_INSTRUCTORES-20190918112420.mdf;Initial Catalog=aspnet-SISTEMA_CENSO_INSTRUCTORES-20190918112420;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="dbcontext" connectionString="data source=inec-app-07\inectest01;initial catalog=INEC_CENSOS_SRI;user id=ADMIN_CENSO;password=admincenso_2020;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Dbcontext" connectionString="data source=inec-app-07\inectest01;initial catalog=INEC_CENSOS_SRI;user id=ADMIN_CENSO;password=admincenso_2020;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Dbcontext1" connectionString="data source=inec-app-07\inectest01;initial catalog=INEC_CENSOS_SRI;user id=ADMIN_CENSO;password=admincenso_2020;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
