--- a/SISTEMA_CENSO_INSTRUCTORES/SISTEMA_CENSO_INSTRUCTORES.csproj
+++ b/SISTEMA_CENSO_INSTRUCTORES/SISTEMA_CENSO_INSTRUCTORES.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.Extensions" />
