--- a/SISTEMA_CENSO_INSTRUCTORES/packages.config
+++ b/SISTEMA_CENSO_INSTRUCTORES/packages.config
@@ -47,5 +47,6 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="popper.js" version="1.14.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="System.DirectoryServices" version="4.5.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
