--- a/SISTEMA_CENSO_INSTRUCTORES/Web.config
+++ b/SISTEMA_CENSO_INSTRUCTORES/Web.config
@@ -10,9 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SISTEMA_CENSO_INSTRUCTORES-20190918112420.mdf;Initial Catalog=aspnet-SISTEMA_CENSO_INSTRUCTORES-20190918112420;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="dbcontext" connectionString="data source=inec-app-07\inectest01;initial catalog=INEC_CENSOS_SRI;user id=ADMIN_CENSO;password=admincenso_2020;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Dbcontext" connectionString="data source=inec-app-07\inectest01;initial catalog=INEC_CENSOS_SRI;user id=ADMIN_CENSO;password=admincenso_2020;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Dbcontext1" connectionString="data source=inec-app-07\inectest01;initial catalog=INEC_CENSOS_SRI;user id=ADMIN_CENSO;password=admincenso_2020;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="Contexto" connectionString="data source=Inec-test-01\INECTEST01;initial catalog=INEC_CENSOS_SRI;persist security info=True;user id=ADMIN_CENSO;password=admincenso_2020;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="Contexto" connectionString="data source=Inec-app-07\INECTEST01;initial catalog=INEC_CENSOS_SRI;persist security info=True;user id=ADMIN_CENSO;password=admincenso_2020;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
@@ -102,9 +101,9 @@
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-    <providers>
+    <!--<providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    </providers>-->
   </entityFramework>
   <system.codedom>
     <compilers>
