--- a/SISTEMA_CENSO_INSTRUCTORES/SISTEMA_CENSO_INSTRUCTORES.csproj
+++ b/SISTEMA_CENSO_INSTRUCTORES/SISTEMA_CENSO_INSTRUCTORES.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -218,6 +219,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Formulario.aspx" />
+    <Content Include="Properties\DataSources\System.Data.DataTable.datasource" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -258,8 +260,17 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <None Include="Service References\sigrhuProd\sGenerico.disco" />
+    <None Include="Service References\sigrhuProd\configuration91.svcinfo" />
+    <None Include="Service References\sigrhuProd\configuration.svcinfo" />
+    <None Include="Service References\sigrhuProd\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="ViewSwitcher.ascx" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Bundle.config" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
@@ -274,6 +285,19 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <None Include="Service References\sigrhuProd\sGenerico.wsdl" />
+    <None Include="Service References\sigrhuProd\sGenerico.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\sigrhuProd\sGenerico1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\sigrhuProd\sGenerico2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\sigrhuProd\sGenerico3.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -408,6 +432,11 @@
     <Compile Include="Models\T_DATOS_PARA_CENSO2020.cs" />
     <Compile Include="Models\T_EXPERIENCIA_INSTRUCTORES.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\sigrhuProd\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
     <Compile Include="utilidades\DBConnections.cs" />
     <Compile Include="utilidades\HtmlPaterns.cs" />
@@ -438,6 +467,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\sigrhuProd\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
