--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /SISTEMA_CENSO_INSTRUCTORES/bin
 /SISTEMA_CENSO_INSTRUCTORES/obj/Debug
 /.vs/config
+/SISTEMA_CENSO_INSTRUCTORES/obj/Release/Package/PackageTmp/bin
+/SISTEMA_CENSO_INSTRUCTORES/obj/Release
+/SISTEMA_CENSO_INSTRUCTORES/Properties/PublishProfiles
