--- a/SISTEMA_CENSO_INSTRUCTORES/SISTEMA_CENSO_INSTRUCTORES.csproj
+++ b/SISTEMA_CENSO_INSTRUCTORES/SISTEMA_CENSO_INSTRUCTORES.csproj
@@ -341,6 +341,7 @@
     <Content Include="Scripts\bootstrap-select.min.js.map" />
     <Content Include="Scripts\bootstrap-select.js.map" />
     <Content Include="Content\bootstrap-select.css.map" />
+    <None Include="Properties\PublishProfiles\SISTEMA_INSTRUCTORES.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\i18n\defaults-zh_TW.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
