--- a/SISTEMA_CENSO_INSTRUCTORES/Web.config
+++ b/SISTEMA_CENSO_INSTRUCTORES/Web.config
@@ -60,7 +60,7 @@
             la cadena de conexión con el nombre "DefaultConnection" para conectarse a una instancia de
             SQL Server (incluidos SQL Azure y SQL Compact) en lugar de conectarse a SQL Server Express.
       -->
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+    <sessionState timeout="180" mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
